complete Space implementation for proxima